Fixing white space on search-bar
OK pour chrome, firefox, safari et IE9

--- a/css/header.css
+++ b/css/header.css
@@ -40,7 +40,7 @@
     background: #f17120;
     border: none;
     cursor: pointer;
-    margin-left: -2px;
+    margin-left: -4px;
     height: 2.2em;
     vertical-align: top;
     -webkit-border-radius: 0 10px 10px 0;
